Completed the  python API  to  add similarity to the refernces of the user query  , made changes to the golang  service for  it  and  completed  the angular component  layout for  supporting  the  changes  ...

--- a/angular-frontend/src/app/layout/chat-message/chat-message.component.html
+++ b/angular-frontend/src/app/layout/chat-message/chat-message.component.html
@@ -14,6 +14,9 @@
             <div class="border border-dark bg-light rounded p-2">
                 <small>{{chat.ai_answer}}</small>
             </div>
+            <div class="mt-1  justify-content-end">
+                <small class="btn btn-sm bg-app-theme rounded text-white" (click)="showRefernces()">References</small>
+            </div>
             }
             @if (!chat.ai_answer){
             <app-chat-skeleton></app-chat-skeleton>
