--- a/angular-frontend/src/app/layout/chat/chat.component.html
+++ b/angular-frontend/src/app/layout/chat/chat.component.html
@@ -1,32 +1,46 @@
 <div>
     <app-header></app-header>
     <div class="dashboard__container">
-        <div class="card h-100">
-            <div class="card-header">Chat Interface</div>
-            <div class="card-body interface_body">
-                @if (isLoading) {
-                <div class="placeholder-container">
-                    @for (_ of [].constructor(3); track $index) {
-                    <div class="mb-3">
-                        <app-chat-skeleton></app-chat-skeleton>
+        <div class="row">
+            <div [ngClass]="showReferencesTraversal ? 'col-md-8 px-0' : 'custom-col-95 px-0'">
+                <div class="card h-100 border border-dark">
+                    <div class="card-header bg-app-theme text-white">Chat with {{codeBaseName}}
                     </div>
-                    }
-                </div>
-                } @else {
-                @for (chat of codeChats; track chat.chat_id) {
-                <app-chat-message [chat]="chat"></app-chat-message>
-                }
-                }
+                    <div class="card-body  interface_body">
+                        @if (isLoading) {
+                        <div class="placeholder-container">
+                            @for (_ of [].constructor(3); track $index) {
+                            <div class="mb-3">
+                                <app-chat-skeleton></app-chat-skeleton>
+                            </div>
+                            }
+                        </div>
+                        } @else {
+                        @for (chat of codeChats; track chat.chat_id) {
+                        <app-chat-message [chat]="chat"
+                            (showRefernceTraversalEmitter)="SetshowRefernceTraversal($event)"></app-chat-message>
+                        }
+                        }
 
-            </div>
-            <div class="card-footer">
-                <div class="d-flex gap-2">
-                    <input type="text" class="form-control" placeholder="Type your message..."
-                        [(ngModel)]="userQuestion" (keyup.enter)="handleSend()" />
-                    <button class="btn btn-outline-dark" (click)="handleSend()" [disabled]="!userQuestion.trim()">
-                        Send
-                    </button>
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex gap-2">
+                            <input type="text" class="form-control" placeholder="Type your message..."
+                                [(ngModel)]="userQuestion" (keyup.enter)="handleSend()" />
+                            <button class="btn btn-outline-dark" (click)="handleSend()"
+                                [disabled]="!userQuestion.trim()">
+                                Send
+                            </button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-
+            <div [ngClass]="showReferencesTraversal ? 'col-md-4' : 'custom-col-3'">
+                <app-refrence-traversal [showReferencesTraversal]="this.showReferencesTraversal"
+                    (showRefernceTraversalEmitter)="SetshowRefernceTraversal($event)"></app-refrence-traversal>
+            </div>
         </div>
+
+    </div>
+</div>
